--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
 body{
   height: fit-content;
   overflow-x: hidden;
-
 }
 
 .search-btn{
@@ -127,7 +126,6 @@ width: 26px
 }
 
 .sec1{
-  position: relative;
   height: 100vh;
 }
 
@@ -233,6 +231,11 @@ transform: translateX(14px);
   height: 100%;
 }
 
+.row{
+  margin-right: 0;
+  margin-left: 0;
+}
+
 .sec1 .content{
   text-align: center;
   color: white;
@@ -243,23 +246,23 @@ transform: translateX(14px);
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
- 
 }
 
 
 
 .sec1 .content-wrapper{
   position: absolute;
-  width: 90%;
+  width: 100%;
   height: 100%;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 
 .sec1 .content p{
-  width: 500px;
-  font-size: 13px;
+  width: 500px
+  ;
+      font-size: 13px;
+      margin-left: 50%;
+      transform: translateX(-50%);
 }
 
 .sec1 .content h3{
@@ -737,7 +740,8 @@ white-space: nowrap;
 
 @media (max-width : 450px){
   .sec1 .content p {
-    width: 323px
+    width: 268px
+;
 ;
     font-size: 8px;
 }
