--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 
-/*  */
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
 
 body{
   height: fit-content;
